@@ -44,7 +44,7 @@ public class ProgressReporter {
      * Prints: "Exporting page X of Y: Title"
      */
     public void reportPageStart(int current, int total, String pageTitle) {
-        var message = String.format("Exporting page %d of %d: %s", current, total, pageTitle);
+        var message = "Exporting page %d of %d: %s".formatted(current, total, pageTitle);
         output(message);
     }
 
@@ -52,7 +52,7 @@ public class ProgressReporter {
      * Report successful page export.
      */
     public void reportPageSuccess(int current, int total, String pageTitle, String filename) {
-        var message = String.format("  SUCCESS: page %d of %d: %s -> %s", current, total, pageTitle, filename);
+        var message = "  SUCCESS: page %d of %d: %s -> %s".formatted(current, total, pageTitle, filename);
         output(message);
     }
 
@@ -60,7 +60,7 @@ public class ProgressReporter {
      * Report failed page export.
      */
     public void reportPageFailure(int current, int total, String pageTitle, String pageId, String error) {
-        var message = String.format("  FAILED: page %d of %d: %s (id: %s) - %s",
+        var message = "  FAILED: page %d of %d: %s (id: %s) - %s".formatted(
                 current, total, pageTitle, pageId, error);
         output(message);
     }
@@ -73,17 +73,16 @@ public class ProgressReporter {
 
         output("");
         output("=== Export Summary ===");
-        output(String.format("Total pages: %d", totalPages));
-        output(String.format("Succeeded: %d", successCount));
-        output(String.format("Failed: %d", failureCount));
+        output("Total pages: %d".formatted(totalPages));
+        output("Succeeded: %d".formatted(successCount));
+        output("Failed: %d".formatted(failureCount));
 
         if (failures != null && !failures.isEmpty()) {
             output("");
             output("Failed pages:");
-            for (var fp : failures) {
-                output(String.format("  - %s (id: %s): %s",
-                        fp.pageTitle(), fp.pageId(), fp.errorMessage()));
-            }
+            failures.stream()
+                    .map(fp -> "  - %s (id: %s): %s".formatted(fp.pageTitle(), fp.pageId(), fp.errorMessage()))
+                    .forEach(this::output);
         }
     }
 
